[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/Todo.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Processor.gd" type="Script" id=2]
[ext_resource path="res://Assets/Characters/Anthony.tres" type="SpriteFrames" id=3]
[ext_resource path="res://Assets/Music/Stress-beep.mp3" type="AudioStream" id=4]
[ext_resource path="res://Assets/Music/Toast-explode.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Music/work-done.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.752941, 0.160784, 0.258824, 1 )
border_width_right = 8
border_color = Color( 0.972549, 0.435294, 0.329412, 1 )
border_blend = true

[sub_resource type="StyleBoxEmpty" id=3]

[node name="Processor" type="StaticBody2D" groups=[
"processors",
]]
collision_layer = 3
collision_mask = 3
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 4, 4 )
shape = SubResource( 1 )

[node name="HeatMeter" type="ProgressBar" parent="."]
anchor_left = 32.0
anchor_right = 32.0
margin_left = -32.0
margin_top = 32.0
margin_right = 32.0
margin_bottom = 96.0
grow_horizontal = 0
rect_rotation = -90.0
rect_clip_content = true
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
step = 1.0
rounded = true
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToDo" parent="." instance=ExtResource( 1 )]
position = Vector2( -48, 20 )
z_index = 2
z_as_relative = false

[node name="ToDo2" parent="." instance=ExtResource( 1 )]
position = Vector2( -48, 0 )
z_index = 1
z_as_relative = false

[node name="ToDo3" parent="." instance=ExtResource( 1 )]
position = Vector2( -48, -20 )
z_as_relative = false

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 3 )

[node name="TaskTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="HeatTimer" type="Timer" parent="."]
autostart = true

[node name="BoostTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="StressSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -25.0

[node name="ToastedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="WorkDoneSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0

[connection signal="timeout" from="TaskTimer" to="." method="_on_TaskTimer_timeout"]
[connection signal="timeout" from="HeatTimer" to="." method="_on_HeatTimer_timeout"]
[connection signal="timeout" from="BoostTimer" to="." method="_on_BoostTimer_timeout"]
